sass dir + upds

--- a/quotes.html
+++ b/quotes.html
@@ -76,6 +76,38 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>It's with a K</b>
+                        <blockquote>
+                            <img
+                                src="/static/media/quotes/PXL_20220221_002131499.MP.jpg"
+                                alt=""
+                            />
+                        </blockquote>
+                    </div>
+                    <div>
+                        <b>The Final Chapter of a Title.</b>
+                        <blockquote>
+                            <span>
+                                How many days of sadness must I spend<br />
+                                To get hatred into gladness?<br />
+                                <br />
+                                And tell me how much sorrow must I spend<br />
+                                To get a future for tomorrow?<br />
+                                <br />
+                                This must be a proud nation of crudeness.<br />
+                                This world used to mean so very much.<br />
+                                <br />
+                                Why did you change my happiness to misery<br />
+                                and heartbreak?<br />
+                                <br />
+                                How must I be lonely?<br />
+                                Why can't you love and want me<br />
+                                Until the end of time?<br />
+                            </span>
+                        </blockquote>
+                        <p>Bob Beamon</p>
+                    </div>
+                    <div>
                         <b>Don't Laugh, I Love You</b>
                         <blockquote>
                             In the late summer of that year we lived in a house
