--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@
                         <li>
                             <a href="//toolbox.mehvix.com/lorenz/">Lorenz</a>
                         </li>
+                        <li>
+                            <a href="//toolbox.mehvix.com/mline/">Multiline String Converter</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
