--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=569, maximum-scale=1" />
     <link rel="alternate" type="application/rss+xml" title="Blog RSS" href="//mehvix.com/posts/rss.xml" />
     <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
+    <link href="https://toolbox.mehvix.com/toolbox-posts.css" type="text/css" rel="stylesheet" />
     <script src="/static/js/include.js"></script>
 
     <!-- HLJS (try and remove if not used) -->
@@ -297,6 +298,10 @@
         </div>
 
         <div>
+
+            <input type="text" name="" id="">
+            <input type="number" name="" id="">
+
             <h1>Pages</h1>
             <ul>
                 <li>
@@ -315,10 +320,6 @@
                             21-12-09 ::
                             <a href="posts/pass.html" id="pass">Killing pass.mehvix.com</a>
                         </li>
-                        <li>
-                            21-10-31 ::
-                            <a href="posts/tiling-distance.html" id="tiling-distance">Tiling Distance Contradiction</a>
-                        </li>
                     </ul>
                 </li>
                 <li>
@@ -332,28 +333,34 @@
                 <li>
                     <a href="//toolbox.mehvix.com">Toolbox</a>
                     <ul class="sub-posts">
-                        <li><a href="//toolbox.mehvix.com/resistor/">Resistor Calculator</a></li>
-                        <li>
-                            <a href="//toolbox.mehvix.com/screw-and-drill/">Screw and Drill Helper</a>
+                        <li id="resistor"><a href="resistor/">Resistor Calculator</a></li>
+                        <li id="screw-and-drill">
+                            <a href="screw-and-drill/">Screw and Drill Helper</a>
                         </li>
-                        <li><a href="//toolbox.mehvix.com/color-picker/">Color Picker</a></li>
-                        <li>
-                            <a href="//toolbox.mehvix.com/ical-generator/">Google Calendar iCal Generator</a>
+                        <li id="color-picker"><a href="color-picker/">Color Picker</a></li>
+                        <li id="ical-generator">
+                            <a href="ical-generator/">Google Calendar iCal Generator</a>
                         </li>
-                        <li>
-                            <a href="//toolbox.mehvix.com/poker-range/">Poker Range Calculator</a>
+                        <li id="poker-range">
+                            <a href="poker-range/">Poker Range Calculator</a>
                         </li>
-                        <li>
-                            <a href="//toolbox.mehvix.com/onedark/">OneDark Theme Colors</a>
+                        <li id="onedark">
+                            <a href="onedark/">OneDark Theme Colors</a>
                         </li>
-                        <li>
-                            <a href="//toolbox.mehvix.com/points/">Point Paint</a>
+                        <li id="points">
+                            <a href="points/">Point Paint</a>
                         </li>
-                        <li>
-                            <a href="//toolbox.mehvix.com/lorenz/">Lorenz</a>
+                        <li id="lorenz">
+                            <a href="lorenz/">Lorenz</a>
                         </li>
-                        <li>
-                            <a href="//toolbox.mehvix.com/mline/">Multiline String Converter</a>
+                        <li id="mline">
+                            <a href="mline/">Multiline String Converter</a>
+                        </li>
+                        <li id="mod-sheet">
+                            <a href="mod-sheet/">Modulo Sheet (CRT Visualizer)</a>
+                        </li>
+                        <li id="rsa">
+                            <a href="rsa/">RSA Encoder</a>
                         </li>
                     </ul>
                 </li>
