--- a/index.html
+++ b/index.html
@@ -331,32 +331,32 @@
                     <ul class="sub-posts">
                         <li id="resistor"><a href="resistor/">Resistor Calculator</a></li>
                         <li id="screw-and-drill">
-                            <a href="screw-and-drill/">Screw and Drill Helper</a>
+                            <a href="//toolbox.mehvix.com/screw-and-drill/">Screw and Drill Helper</a>
                         </li>
                         <li id="color-picker"><a href="color-picker/">Color Picker</a></li>
                         <li id="ical-generator">
-                            <a href="ical-generator/">Google Calendar iCal Generator</a>
+                            <a href="//toolbox.mehvix.com/ical-generator/">Google Calendar iCal Generator</a>
                         </li>
                         <li id="poker-range">
-                            <a href="poker-range/">Poker Range Calculator</a>
+                            <a href="//toolbox.mehvix.com/poker-range/">Poker Range Calculator</a>
                         </li>
                         <li id="onedark">
-                            <a href="onedark/">OneDark Theme Colors</a>
+                            <a href="//toolbox.mehvix.com/onedark/">OneDark Theme Colors</a>
                         </li>
                         <li id="points">
-                            <a href="points/">Point Paint</a>
+                            <a href="//toolbox.mehvix.com/points/">Point Paint</a>
                         </li>
                         <li id="lorenz">
-                            <a href="lorenz/">Lorenz</a>
+                            <a href="//toolbox.mehvix.com/lorenz/">Lorenz</a>
                         </li>
                         <li id="mline">
-                            <a href="mline/">Multiline String Converter</a>
+                            <a href="//toolbox.mehvix.com/mline/">Multiline String Converter</a>
                         </li>
                         <li id="mod-sheet">
-                            <a href="mod-sheet/">Modulo Sheet (CRT Visualizer)</a>
+                            <a href="//toolbox.mehvix.com/mod-sheet/">Modulo Sheet (CRT Visualizer)</a>
                         </li>
                         <li id="rsa">
-                            <a href="rsa/">RSA Encoder</a>
+                            <a href="//toolbox.mehvix.com/rsa/">RSA Encoder</a>
                         </li>
                     </ul>
                 </li>
