--- a/index.html
+++ b/index.html
@@ -329,11 +329,15 @@
                 <li>
                     <a href="//toolbox.mehvix.com">Toolbox</a>
                     <ul class="sub-posts">
-                        <li id="resistor"><a href="resistor/">Resistor Calculator</a></li>
+                        <li id="resistor">
+                            <a href="//toolbox.mehvix.com/resistor/">Resistor Calculator</a>
+                        </li>
                         <li id="screw-and-drill">
                             <a href="//toolbox.mehvix.com/screw-and-drill/">Screw and Drill Helper</a>
                         </li>
-                        <li id="color-picker"><a href="color-picker/">Color Picker</a></li>
+                        <li id="color-picker">
+                            <a href="//toolbox.mehvix.com/color-picker/">Color Picker</a>
+                        </li>
                         <li id="ical-generator">
                             <a href="//toolbox.mehvix.com/ical-generator/">Google Calendar iCal Generator</a>
                         </li>
